# es-knowledge-base-mcp

./: .gitignore  CONTRIBUTORS.md  Makefile  README.md  configure_mcp.sh  contributing.md  pyproject.toml  readme.md  run-mcp-inspector.sh
.github/workflows/: ci.yml
elasticsearch-documentation-manager-mcp/: readme.md  server.py
esdocmanagermcp/: server.py
esdocmanagermcp/components/: __init__.py  crawl.py  indices.py  search.py  shared.py
esdocmanagermcp/components/errors/: __init__.py  base.py
esdocmanagermcp/components/future/: prompts.py  resources.py
esdocmanagermcp/components/helpers/: __init__.py  docker_utils.py
src/es_knowledge_base_mcp/: server.py
src/es_knowledge_base_mcp/clients/: __init__.py  crawl.py  docker.py  elasticsearch.py  es_knowledge_base.py  knowledge_base.py  web.py
src/es_knowledge_base_mcp/errors/: __init__.py  ask.py  crawler.py  fetch.py  knowledge_base.py  learn.py  server.py
src/es_knowledge_base_mcp/interfaces/: __init__.py  knowledge_base.py
src/es_knowledge_base_mcp/models/: base.py  constants.py  errors.py  settings.py
src/es_knowledge_base_mcp/servers/: __init__.py  ask.py  fetch.py  learn.py  manage.py  remember.py
src/es_knowledge_base_mcp/servers/contrib/bulk_tool_caller/: __init__.py  bulk_tool_caller.py
src/es_knowledge_base_mcp/servers/contrib/mcp_mixin/: mcp_mixin.py
tests/unit/: test_crawl_helpers.py  test_crawler.py  test_shared.py
tests/unit/clients/: test_crawl.py  test_docker.py  test_elasticsearch.py  test_es_knowledge_base.py  test_web.py  unit_test_plan.md
tests/unit/clients/__snapshots__/: test_crawl.ambr  test_es_knowledge_base.ambr
tests/unit/servers/: test_learn.py
